refactored folder structure

--- a/src/index.html
+++ b/src/index.html
@@ -9,8 +9,7 @@
     <title>Angular 2 Template</title>
   </head>
   <body>
-    <home-page></home-page>
-    <!-- <app-root>Loading...</app-root> -->
+    <app-root></app-root>
     
     <script src="polyfills.bundled.js"></script>
     <script src="vendors.bundled.js"></script>
